<resources>
    <string name="app_name">Calculadora</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="adition">+</string>
    <string name="substraction">-</string>
    <string name="multiplication">x</string>
    <string name="division">÷</string>
    <string name="plus_minus">+/-</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="sqrt">sqrt</string>
    <string name="inverse">1/x</string>
    <string name="Tpow">10^x</string>
    <string name="pow">x^n</string>
    <string name="store">Store</string>
    <string name="recall">Recall</string>
    <string name="memplus">Mem +</string>
    <string name="memminus">Mem -</string>
    <string name="mc">MC</string>
    <string name="labelMemoria">Mem: </string>
    <string name="memoria">0.0</string>
    <string name="clear">Clear</string>
    <string name="backspace">Backspace</string>
    <string name="pi">π</string>
    <string name="degrad">DEG/RAD</string>
    <string name="modeLabel">mode:</string>
    <string name="mode">radianes</string>
    <string name="operationDisplayText">%1$s%2$s%3$s</string>
</resources>