<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart">

    <Button
        android:id="@+id/button0"
        android:layout_width="240dp"
        android:layout_height="61dp"
        android:layout_marginBottom="24dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button0"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/button1"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button4"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button7"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button7"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/adition"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#34509E"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/adition"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/substraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/division"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#34509E"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/division"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/adition"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#34509E"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/multiplication"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/plusminus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/division"
        app:layout_constraintTop_toTopOf="@+id/division" />

    <Button
        android:id="@+id/plusminus"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#34509E"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/plus_minus"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplication"
        app:layout_constraintTop_toTopOf="@+id/multiplication" />

    <Button
        android:id="@+id/substraction"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#34509E"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/substraction"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/adition"
        app:layout_constraintTop_toTopOf="@+id/adition" />

    <Button
        android:id="@+id/equal"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#34509E"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/substraction"
        app:layout_constraintTop_toTopOf="@+id/substraction" />

    <Button
        android:id="@+id/button8"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button8"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button9"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button9"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button5"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button5"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button6"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button6"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button2"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:onClick="addNumberToDisplay"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/button3"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/dot"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:width="80dp"
        android:backgroundTint="#212638"
        android:backgroundTintMode="add"
        android:fontFamily="monospace"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textSize="25sp"
        android:typeface="monospace"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <TextView
        android:id="@+id/operationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/button0"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>